fix: i18n - correct yearly savings to 19% (was 17%), add navigation.login key

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -60,8 +60,9 @@
     "teams": "Teams",
     "profile": "Profile",
     "settings": "Settings",
-    "logout": "Log out",
-    "invitations": "Invitations"
+    "logout": "Logout",
+    "invitations": "Invitations",
+    "login": "Log in"
   },
   "months": {
     "jan": "JAN",
