--- a/src/i18n/locales/sv/landing.json
+++ b/src/i18n/locales/sv/landing.json
@@ -188,8 +188,8 @@
     },
     "activities": {
       "ring1": "Ring 1",
-      "kampanjer": "Kampanjer",
-      "planering": "Planering",
+      "campaigns": "Kampanjer",
+      "planning": "Planering",
       "firstActivity": "Min första aktivitet"
     }
   },
