fix: i18n - add language switcher to editor Header, fix hardcoded Swedish strings in OrganizationPanel

--- a/src/i18n/locales/en/editor.json
+++ b/src/i18n/locales/en/editor.json
@@ -68,7 +68,9 @@
     "outerRings": "OUTER RINGS",
     "innerDescription": "Inner rings appear between the center and months. Add activities to visualize events on these rings.",
     "outerDescription": "Outer rings appear outside the months. Use them to categorize events by departments, teams, or audiences.",
-    "colorTooltip": "Color: {{color}} (changed via color palette in settings)"
+    "colorTooltip": "Color: {{color}} (change via color palette in settings)",
+    "integrationConnected": "Data source connected - click to manage",
+    "integrationConnect": "Connect data source"
   },
   "activityGroups": {
     "title": "ACTIVITY GROUPS",
