fix: i18n - translate loader in App.jsx, add language switcher to PreviewWheelPage, add missing labels.none key

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -39,7 +39,8 @@
     "time": "Time",
     "selectTeam": "Select team",
     "personal": "Personal wheel",
-    "teamWheelInfo": "Team wheels can be seen by all team members"
+    "teamWheelInfo": "Team wheels can be seen by all team members",
+    "none": "None"
   },
   "messages": {
     "saved": "Saved!",
