--- a/src/i18n/locales/sv/common.json
+++ b/src/i18n/locales/sv/common.json
@@ -39,7 +39,8 @@
     "time": "Tid",
     "selectTeam": "Välj team",
     "personal": "Personligt hjul",
-    "teamWheelInfo": "Team-hjul kan ses av alla teammedlemmar"
+    "teamWheelInfo": "Team-hjul kan ses av alla teammedlemmar",
+    "none": "Ingen"
   },
   "messages": {
     "saved": "Sparad!",
