fixes translations on /auth

--- a/src/i18n/locales/en/auth.json
+++ b/src/i18n/locales/en/auth.json
@@ -41,6 +41,19 @@
       "passwordTooShort": "Password must be at least 6 characters"
     }
   },
+  "page": {
+    "signupTitle": "Create your account",
+    "loginTitle": "Sign in",
+    "signupSubtitle": "Get started instantly – no credit card needed",
+    "loginSubtitle": "Welcome back!",
+    "freeBenefitsTitle": "Included in the free version:",
+    "benefit1": "3 year wheels",
+    "benefit2": "1 team with up to 3 members",
+    "benefit3": "Export as PNG and SVG",
+    "upgradeNote": "Upgrade anytime for AI assistance, unlimited wheels and teams",
+    "noAccount": "No account yet?",
+    "seePlans": "See our plans"
+  },
   "provider": {
     "name": "YearWheel Planner",
     "tagline": "is a SaaS service created and operated by",
