--- a/src/i18n/locales/sv/auth.json
+++ b/src/i18n/locales/sv/auth.json
@@ -41,6 +41,19 @@
       "passwordTooShort": "Lösenordet måste vara minst 6 tecken"
     }
   },
+  "page": {
+    "signupTitle": "Skapa ditt konto",
+    "loginTitle": "Logga in",
+    "signupSubtitle": "Kom igång direkt – ingen kreditkort behövs",
+    "loginSubtitle": "Välkommen tillbaka!",
+    "freeBenefitsTitle": "Ingår i den kostnadsfria versionen:",
+    "benefit1": "3 årshjul",
+    "benefit2": "1 team med upp till 3 medlemmar",
+    "benefit3": "Export som PNG och SVG",
+    "upgradeNote": "Uppgradera när som helst för AI-assistans, obegränsade hjul och team",
+    "noAccount": "Inget konto ännu?",
+    "seePlans": "Se våra planer"
+  },
   "provider": {
     "name": "YearWheel Planner",
     "tagline": "är en SaaS-tjänst skapad och driven av",
